--- a/app/src/main/res/layout/fragment_doc_left.xml
+++ b/app/src/main/res/layout/fragment_doc_left.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.coder.seadoc.views.NestedScrollWebView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/webview_doc"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <WebView
-        android:id="@+id/webview_doc"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+    android:layout_height="match_parent" />
