--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="list_title_color">#232323</color>
     <color name="list_item_sp">#e8e8e8</color>
     <color name="alpha10_black">#19000000</color>
+    <color name="alpha10_white">#19ffffff</color>
     <color name="card_bg">#ffffffff</color>
 </resources>
