--- a/app/src/main/res/layout/activity_doc_detail.xml
+++ b/app/src/main/res/layout/activity_doc_detail.xml
@@ -23,7 +23,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
                 android:background="@color/colorPrimary"
-                app:layout_scrollFlags="scroll|enterAlways|snap" />
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                android:theme="@style/AppTheme.AppBarOverlay"
+				app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/indicator"
