--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<TextView
+<com.jude.easyrecyclerview.EasyRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="待实现"
-    android:textSize="20sp"
-    android:gravity="center"/>
-    <com.coder.seadoc.views.TabView
-        android:id="@+id/tabView"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="#4a5bbc"/>
-</FrameLayout>
+    app:layout_empty="@layout/news_list_empty"
+    app:layout_error="@layout/news_list_error"/>
