--- a/app/src/main/res/layout/item_news_list.xml
+++ b/app/src/main/res/layout/item_news_list.xml
@@ -7,15 +7,16 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="8dp"
         android:background="@color/list_item_sp" />
 
     <RelativeLayout
+        android:id="@+id/item_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
+        android:background="@drawable/item_press_selector"
         android:clickable="true"
-        android:background="@drawable/item_press_selector">
+        android:paddingBottom="10dp">
 
         <ImageView
             android:id="@+id/item_cover"
@@ -32,7 +33,8 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:textColor="@color/list_title_color"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             tools:text="我是标题" />
 
         <TextView
@@ -43,8 +45,8 @@
             android:layout_marginTop="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:textColor="@color/list_content_color"
-            android:textSize="14sp"
+            android:textColor="@color/list_title_color"
+            android:textSize="13sp"
             tools:text="我是二级标题啊啊啊啊" />
 
         <TextView
@@ -54,8 +56,8 @@
             android:layout_below="@id/item_sub_title"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:textColor="@color/list_content_color"
-            android:textSize="12sp"
+            android:textColor="@color/list_title_color"
+            android:textSize="13sp"
             tools:text="作者" />
 
         <TextView
@@ -67,7 +69,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:textColor="@color/list_content_color"
-            android:textSize="12sp"
+            android:textSize="13sp"
             tools:text="三分钟前" />
     </RelativeLayout>
 </LinearLayout>
