--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,6 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowNoTitle">true</item>
     </style>
-    <style name="AppTheme.Translucent.NewsDetailTheme">
-    </style>
+
+    <style name="AppTheme.Translucent.NewsDetailTheme"></style>
 </resources>
