--- a/app/src/main/res/layout/activity_doc_detail.xml
+++ b/app/src/main/res/layout/activity_doc_detail.xml
@@ -15,35 +15,49 @@
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="4dp">
+            android:layout_height="wrap_content">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
                 android:background="@color/colorPrimary"
-                app:layout_scrollFlags="scroll|enterAlways|snap"
+                android:elevation="4dp"
                 android:theme="@style/AppTheme.AppBarOverlay"
-				app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-            <android.support.design.widget.TabLayout
-                android:id="@+id/indicator"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"
-                android:visibility="visible"
-                app:layout_scrollFlags="snap"
-                app:tabIndicatorColor="@color/colorPrimary"
-                app:tabSelectedTextColor="@color/colorPrimary"
-                app:tabTextColor="@color/title_color" />
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager"
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <WebView
+                android:id="@+id/content_webview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </android.support.v4.widget.NestedScrollView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/bt_to_blog_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="20dp"
+            android:layout_marginRight="20dp"
+            android:elevation="4dp"
+            android:src="@drawable/ic_new"
+            app:layout_behavior="com.coder.seadoc.views.FloatBtnBehavior" />
+
+        <FrameLayout
+            android:id="@+id/blog_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="8dp"
+            android:visibility="invisible"></FrameLayout>
+
     </android.support.design.widget.CoordinatorLayout>
 
     <LinearLayout
@@ -63,7 +77,7 @@
                 android:id="@+id/wv_menu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="none"/>
+                android:scrollbars="none" />
         </LinearLayout>
 
     </LinearLayout>
