--- a/app/src/main/res/layout/fragment_doc_left.xml
+++ b/app/src/main/res/layout/fragment_doc_left.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.coder.seadoc.views.NestedScrollWebView xmlns:android="http://schemas.android.com/apk/res/android"
+<WebView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/webview_doc"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
