--- a/app/src/main/res/drawable-v21/item_press_selector.xml
+++ b/app/src/main/res/drawable-v21/item_press_selector.xml
@@ -4,4 +4,5 @@
     <item
         android:id="@android:id/mask"
         android:drawable="@android:color/black" />
+    <item android:drawable="@color/card_bg"/>
 </ripple>
