--- a/app/src/main/res/layout/item_blog_list.xml
+++ b/app/src/main/res/layout/item_blog_list.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#fcfcfc"
+    android:background="@drawable/item_press_selector"
     android:orientation="vertical"
     android:paddingTop="10dp">
 
